kubernetes/applications/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: http
